responsive design done

--- a/index.html
+++ b/index.html
@@ -194,38 +194,40 @@
 
             <!-- our benifits  -->
             <section class="pb-5">
-                <div class="grid sm:grid-cols-2 gap-7">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-7 justify-center items-center">
 
-                    <div class="rounded-lg sm:flex bg-white p-5">
-                        <img class="w-20 h-20 mr-5 " src="images/house.png" alt="">
-                        <div class="">
-                            <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
-                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                    <div class="md:order-2">
+                        <div class=" row-span-3 ">
+                            <img src="images/shopping.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="md:order-1">
+                        <div class="rounded-lg sm:flex bg-white p-5 m-2">
+                            <img class="w-20 h-20 mr-5 " src="images/house.png" alt="">
+                            <div class="">
+                                <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body.</p>
+                            </div>
                         </div>
 
-                    </div>
-
-                    <div class=" row-span-3 ">
-                        <img src="images/shopping.png" alt="">
-                    </div>
-
-                    <div class="rounded-lg sm:flex bg-white p-5">
-                        <img class="w-20 h-20 mr-5" src="images/box.png" alt="">
-                        <div>
-                            <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
-                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        <div class="rounded-lg sm:flex bg-white p-5 m-2">
+                            <img class="w-20 h-20 mr-5" src="images/box.png" alt="">
+                            <div>
+                                <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body.</p>
+                            </div>
                         </div>
 
-                    </div>
-
-                    <div class="rounded-lg sm:flex bg-white p-5">
-                        <img class="w-20 h-20 mr-5" src="images/question.png" alt="">
-                        <div>
-                            <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
-                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        <div class="rounded-lg sm:flex bg-white p-5 m-2">
+                            <img class="w-20 h-20 mr-5" src="images/question.png" alt="">
+                            <div>
+                                <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                                <p>Everybody is different, which is why we offer styles for every body.</p>
+                            </div>
                         </div>
-
                     </div>
+
                 </div>
             </section>
 
@@ -248,3 +250,42 @@
 </body>
 
 </html>
+
+
+
+<!-- our benifits  -->
+<!-- <section class="pb-5">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-7">
+
+            <div class="rounded-lg sm:flex bg-white p-5">
+                <img class="w-20 h-20 mr-5 " src="images/house.png" alt="">
+                <div class="">
+                    <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                    <p>Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+
+            </div>
+
+            <div class=" row-span-3 ">
+                <img src="images/shopping.png" alt="">
+            </div>
+
+            <div class="rounded-lg sm:flex bg-white p-5">
+                <img class="w-20 h-20 mr-5" src="images/box.png" alt="">
+                <div>
+                    <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                    <p>Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+
+            </div>
+
+            <div class="rounded-lg sm:flex bg-white p-5">
+                <img class="w-20 h-20 mr-5" src="images/question.png" alt="">
+                <div>
+                    <h4 class="text-2xl font-bold">Find The Perfect Fit</h4>
+                    <p>Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+
+            </div>
+        </div>
+    </section> -->
